Update UVA 1595 - Symmetry : Runtime(~rank 1)

--- a/UVA/APOAPC_2nd/1595 - Symmetry/README
+++ b/UVA/APOAPC_2nd/1595 - Symmetry/README
@@ -2,7 +2,12 @@
 16661451    36  Chiahsun Cheng (chiahsun cheng)   Accepted  C++11   0.013   2 mins ago
 [solve2.cc]
 16661476    47  Chiahsun Cheng (chiahsun cheng)   Accepted  C++11   0.019   1 mins ago
+[solve3.cc]
+16661505    47  Chiahsun Cheng (chiahsun cheng)   Accepted  C++11   0.019   23 mins ago
+[solve4.cc]
+16661598    17  Chiahsun Cheng (chiahsun cheng)   Accepted  C++11   0.009   1 mins ago
 
 [1] 0.009
 [17] 0.012
 [18] 0.013
+
