--- a/UVA/10970 - Big Chocolate/README
+++ b/UVA/10970 - Big Chocolate/README
@@ -33,8 +33,8 @@ We prove it by the following two proofs.
     cost = cost(A) + cost(B) + 1 = C - 1
  (i) Base case: 1 x 1 chocolate
      the cost = 0 = 1 * 1 - 1
- (ii) For any two chocolate that has optimal cost A = (a x b) and B = (a x c) no matter a, b, c, as long as a equals one size and b+c equals another side
-     the optimal cost for the combination of the two C = a x (b + c)
+ (ii) For any two chocolate that has optimal cost A = (a x b) and B = (a x c) no matter a, b, c, as long as (a equals one side) and (b+c equals another side)
+     the optimal cost for the chocolate that is the combination of the two, C = a x (b + c)
      the cost = a * b - 1 + a * c - 1 + 1
               = a * (b + c) - 1
 
@@ -44,4 +44,4 @@ We prove it by the following two proofs.
  Split each Mx1 chocholate into 1x1 chocolate (cost = N*(M-1))
  The cost = N-1+N*(M-1) = N*M-1
 
-By (1)(2) that concludes the proof.
+By (1)(2), we conclude the proof.
