Add conversion to tflite model

--- a/kaggle/tf-flower-photo-tfrec/evaluation_model.ipynb
+++ b/kaggle/tf-flower-photo-tfrec/evaluation_model.ipynb
@@ -27,13 +27,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "da9acfea-8320-4b28-b6c8-5860047b8c3e",
+   "id": "6b4bef91-68f8-427f-9ec8-37ace506a50d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.engine.sequential.Sequential at 0x115022190>"
+       "'3.9.6 (default, Jun 29 2021, 05:25:02) \\n[Clang 12.0.5 (clang-1205.0.22.9)]'"
       ]
      },
      "execution_count": 2,
@@ -42,13 +42,80 @@
     }
    ],
    "source": [
-    "model = keras.models.load_model('./tf-flower-photo-tfrec.h5')\n",
-    "model"
+    "import sys\n",
+    "sys.version"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "528ae7b9-f034-429f-b14c-6b88a119822c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\npretrained_model = keras.applications.Xception(\\n    include_top = False\\n)\\npretrained_model.trainable = False\\n    \\nmodel = keras.Sequential([\\n    keras.layers.InputLayer(input_shape = [None, None, 3]),\\n    keras.layers.experimental.preprocessing.Resizing(299, 299),\\n    keras.layers.experimental.preprocessing.Rescaling(scale = 1./127.5, offset = -1),\\n    pretrained_model,\\n    keras.layers.GlobalAveragePooling2D(),\\n    keras.layers.Dense(len(class_names))\\n])\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is just as the reference for the structure of the h5 model trained on the server\n",
+    "\"\"\"\n",
+    "pretrained_model = keras.applications.Xception(\n",
+    "    include_top = False\n",
+    ")\n",
+    "pretrained_model.trainable = False\n",
+    "    \n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.InputLayer(input_shape = [None, None, 3]),\n",
+    "    keras.layers.experimental.preprocessing.Resizing(299, 299),\n",
+    "    keras.layers.experimental.preprocessing.Rescaling(scale = 1./127.5, offset = -1),\n",
+    "    pretrained_model,\n",
+    "    keras.layers.GlobalAveragePooling2D(),\n",
+    "    keras.layers.Dense(len(class_names))\n",
+    "])\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8d2d984-6a5a-4ed0-914a-8d46ba2ec092",
+   "metadata": {},
+   "source": [
+    "# Load from h5 File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "da9acfea-8320-4b28-b6c8-5860047b8c3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.engine.sequential.Sequential at 0x105bfd0a0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_path = './tf-flower-photo-tfrec.h5'\n",
+    "model = keras.models.load_model(model_path)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "d16142ff-d7a5-4cbc-84dd-11c2f9e1b1c9",
    "metadata": {},
    "outputs": [],
@@ -67,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "cf118e0b-d898-4cc7-ad88-9de9819ec301",
    "metadata": {},
    "outputs": [
@@ -77,7 +144,7 @@
        "PIL.JpegImagePlugin.JpegImageFile"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "926c23f2-b013-4669-84eb-c6489c6162b5",
    "metadata": {},
    "outputs": [],
@@ -98,17 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4171943f-f248-454e-83fd-4564cf34eba8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x195bad100>"
+       "<matplotlib.image.AxesImage at 0x18e797f10>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -132,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6f2e6f4b-0fc1-4dd1-ab73-c03f13735ea8",
    "metadata": {},
    "outputs": [],
@@ -143,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "72fcd25a-9f3c-4dd5-9bbb-885926cc407f",
    "metadata": {},
    "outputs": [],
@@ -154,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "381cdc96-d9d3-48c0-96cc-2dd3c6f7eb77",
    "metadata": {},
    "outputs": [
@@ -172,7 +239,7 @@
        "       1.1016223e-06], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "189978bd-ffdd-43d6-89d6-60f11dc31b52",
    "metadata": {},
    "outputs": [],
@@ -209,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "fa64ae6e-d806-4e2d-a062-cfa2ae394b07",
    "metadata": {},
    "outputs": [
@@ -220,7 +287,7 @@
        "       'peruvian lily'], dtype='<U25')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "8f7dd7f4-e835-41d9-9941-d3289f29b883",
    "metadata": {},
    "outputs": [
@@ -241,13 +308,268 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(get_top_k(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "701dec77-29ad-4a12-877a-ec4e5d8def70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['tiger lily', 'blackberry lily', 'fire lily'], dtype='<U25')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_top_k_from_logits(prediction, k):\n",
+    "    arr = tf.nn.softmax(predicted).numpy()\n",
+    "    return np.array(class_names)[get_top_k(arr, k = k)]\n",
+    "\n",
+    "get_top_k_from_logits(predicted, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad347fe4-75fe-4a74-8f0e-6b2b98358408",
+   "metadata": {},
+   "source": [
+    "# Create the TFLite Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9d87bf1c-fecc-4355-a065-4cce089067bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/jupyterlab/3.0.16_1/libexec/lib/python3.9/site-packages/tensorflow/python/keras/utils/generic_utils.py:494: CustomMaskWarning: Custom mask layers require a config and must override get_config. When loading, the custom mask layer must be passed to the custom_objects argument.\n",
+      "  warnings.warn('Custom mask layers require a config and must override '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: /var/folders/n5/cdj4lgpx26g66_jkwm8dd3340000gn/T/tmp80rrcnz9/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keras_model = keras.models.load_model(model_path)\n",
+    "keras_model = model\n",
+    "# https://www.tensorflow.org/api_docs/python/tf/lite/TFLiteConverter\n",
+    "converter = tf.lite.TFLiteConverter.from_keras_model(keras_model)\n",
+    "tflite_model = converter.convert()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9cd2e307-26de-4971-a082-5b53279dc8e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83731400"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pathlib\n",
+    "\n",
+    "tflite_model_path = 'tf-flower-photo-tfrec-full.tflite'\n",
+    "tflite_model_file = pathlib.Path(tflite_model_path)\n",
+    "tflite_model_file.write_bytes(tflite_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3cf33c8-e08b-4dc0-8dee-befde2cb5493",
+   "metadata": {},
+   "source": [
+    "# Evaluation on the TFLite Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6a834002-6ad8-46ae-99a5-44eece87994a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n",
+      "(480, 576, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 480, 576, 3)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(image.dtype)\n",
+    "print(image.shape)\n",
+    "(1, ) + image.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "862dfd55-ffbf-4e93-884f-987421067cad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'input_14', 'index': 0, 'shape': array([1, 1, 1, 3], dtype=int32), 'shape_signature': array([-1, -1, -1,  3], dtype=int32), 'dtype': <class 'numpy.float32'>, 'quantization': (0.0, 0), 'quantization_parameters': {'scales': array([], dtype=float32), 'zero_points': array([], dtype=int32), 'quantized_dimension': 0}, 'sparsity_parameters': {}}]\n",
+      "[1 1 1 3]\n",
+      "0\n",
+      "[1 1 1 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "interpreter = tf.lite.Interpreter(model_content = tflite_model)\n",
+    "input_details = interpreter.get_input_details()\n",
+    "print(input_details)\n",
+    "print(input_details[0]['shape'])\n",
+    "\n",
+    "# https://stackoverflow.com/questions/55701663/input-images-with-dynamic-dimensions-in-tensorflow-lite\n",
+    "input_index = interpreter.get_input_details()[0]['index']\n",
+    "print(input_index)\n",
+    "# Since we train the original model as [batch_size, None, None, 3(channel size)], we need to resize for tf lite to work\n",
+    "interpreter.resize_tensor_input(\n",
+    "    input_index, (1, ) + image.shape\n",
+    ")\n",
+    "interpreter.allocate_tensors()\n",
+    "print(input_details[0]['shape'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1aff1ad4-94fc-461b-8563-659190c1a502",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Identity', 'index': 231, 'shape': array([  1, 104], dtype=int32), 'shape_signature': array([ -1, 104], dtype=int32), 'dtype': <class 'numpy.float32'>, 'quantization': (0.0, 0), 'quantization_parameters': {'scales': array([], dtype=float32), 'zero_points': array([], dtype=int32), 'quantized_dimension': 0}, 'sparsity_parameters': {}}]\n",
+      "231\n",
+      "[  1 104]\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_details = interpreter.get_output_details()\n",
+    "print(output_details)\n",
+    "output_index = interpreter.get_output_details()[0]['index']\n",
+    "print(output_index)\n",
+    "print(output_details[0]['shape'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5201bf25-1ebe-482b-b12c-8813b79203a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 480, 576, 3)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_data = np.array([image.astype(np.float32)])\n",
+    "input_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f75cb45a-837a-424b-8644-5ea039bacb30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interpreter.set_tensor(input_index, input_data)\n",
+    "interpreter.invoke()\n",
+    "predictions = interpreter.get_tensor(output_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eac24fb6-1380-4e7e-b548-47c5bc43cd45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['tiger lily', 'blackberry lily', 'fire lily'], dtype='<U25')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_top_k_from_logits(predicted[0], 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05548989-d019-4f4e-9fe9-6494797e5d40",
+   "metadata": {},
+   "source": [
+    "# Reference\n",
+    "\n",
+    "[UD190 - Introduction to TensorFlow Lite](https://www.udacity.com/course/intro-to-tensorflow-lite--ud190)\n",
+    "\n",
+    "* Lession 2 \n",
+    "  * 11. Colab: Linear Regression\n",
+    "  * 12. Colab: Transfer Learning      \n",
+    "        "
    ]
   }
  ],
